apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

apply plugin: 'androidx.navigation.safeargs'

//This is to make password management easier. Loads fields from a txt file. This file must not
//be pushed to git
Properties localProperties = new Properties()
localProperties.load(rootProject.file("ipren.keys").newDataInputStream())

File propertiesFile = rootProject.file('local.properties')
if (propertiesFile.exists())
    localProperties.load(propertiesFile.newDataInputStream())
android {

    signingConfigs {
        // This file contains default passwords and aliases to the keystore.
        debug {
            //The keystore file must not be pushed to git, and will be kept safe storage
            storeFile file('../debug.keystore')
            storePassword localProperties.getProperty("debug.store.password")
            keyAlias localProperties.getProperty("debug.key.alias")
            keyPassword localProperties.getProperty("debug.key.password")
        }
    }
    compileSdkVersion 29
    buildToolsVersion "29.0.2"
    defaultConfig {
        applicationId "ipren.watchr"
        minSdkVersion 21
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // Put "API_KEY=YOUR_API_KEY" in local.properties
        def api = System.getenv("API_KEY") ?: "KEY_NOT_FOUND"
        if (localProperties.containsKey("API_KEY"))
            buildConfigField("String", "API_KEY", localProperties.getProperty("API_KEY"))
        else
            buildConfigField("String", "API_KEY", '"' + api + '"')

    }
    defaultConfig {
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = [
                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
                        "room.incremental"     : "true",
                        "room.expandProjection": "true"]
            }
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }
    lintOptions {
        // Disable Autofill "autofillHints" warnings, since they use API > 26,
        // we use 21.
        disable 'SmallSp', 'Autofill', 'ContentDescription', "ClickableViewAccessibility"
    }
    dataBinding.enabled = true
}

dependencies {

    def room_version = "2.2.0"


    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.google.android.material:material:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.0.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'

    // AndroidJUnitRunner and JUnit Rules
    androidTestImplementation 'androidx.test:runner:1.2.0'
    androidTestImplementation 'androidx.test:rules:1.2.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation "android.arch.core:core-testing:1.1.1"

    // CircleImageView
    implementation 'de.hdodenhof:circleimageview:3.0.1'

    // Navigation
    implementation "androidx.navigation:navigation-fragment:2.1.0"
    implementation "androidx.navigation:navigation-ui:2.1.0"

    // Glide
    implementation 'com.github.bumptech.glide:glide:4.10.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'

    //Powermock for testing with roboelectric
    testImplementation "org.powermock:powermock-module-junit4:1.6.6"
    testImplementation "org.powermock:powermock-module-junit4-rule:1.6.6"
    testImplementation "org.powermock:powermock-api-mockito:1.6.6"
    testImplementation "org.powermock:powermock-classloading-xstream:1.6.6"

    //Roboelectric for testing
    testImplementation 'org.robolectric:robolectric:4.3'
    testImplementation 'androidx.test:core:1.2.0'

    // Butterknife for easy data binding
    implementation "com.jakewharton:butterknife:10.2.0"
    annotationProcessor "com.jakewharton:butterknife-compiler:10.2.0"

    // Firebase
    implementation 'com.google.firebase:firebase-analytics:17.2.0'
    implementation 'com.google.firebase:firebase-auth:19.1.0'
    implementation 'com.google.firebase:firebase-firestore:21.2.0'
    implementation 'com.google.firebase:firebase-storage:19.1.0'

    // RxJava for handling asynchronous tasks
    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"

    // RetroFit2 and Gson for HTTP handling
    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'

    // Room
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"

    // Paging
    implementation "androidx.paging:paging-runtime:2.1.0"
}
